--- a/styles/soc_link_anima.css
+++ b/styles/soc_link_anima.css
@@ -7,6 +7,7 @@ html {
 *::before {
     box-sizing: border-box;
 }
+
 .link {
     text-decoration: none;
 }
@@ -17,16 +18,16 @@ html {
 body {
     padding-top: 50px;
 }
+
 .bloc {
     display: block;
     position: relative;
     width: 270px;
     height: 104px;
-    margin-left: auto;
-    margin-right: auto;
 
-    background-color: black;
-    border-radius: 8px;
+    overflow: hidden;
+
+    background-color: grey;
 }
 .bloc_list {
     display: flex;
@@ -36,18 +37,27 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    
-    fill: white;
+    background-color: aqua;
+    color: blue;
 }
+.linc_icon {
+    fill: currentColor;
+}
+.bloc_link:hover, .bloc_link:hover.linc_icon {
+    background-color: burlywood;
+    color: darkolivegreen;
+}
+
+
 .one, .two, .three, .four {
     position: absolute;
     top: 30px;
     width: 44px;
     height: 44px;
-    background-color: gray;
+    background-color: white;
     border-radius: 50%;
 
-    animation-duration: 1000ms;
+    animation-duration: 700ms;
     animation-timing-function: linear;
     animation-iteration-count: 1;
     animation-direction: normal;
@@ -135,7 +145,4 @@ body {
         left: 194px;
         border-radius: 25%;
     }
-}
-.linc_icon {
-    display: block;
 }
